edit secion cero error

--- a/scss/layout/_editionmode.scss
+++ b/scss/layout/_editionmode.scss
@@ -81,7 +81,7 @@ body[data-theme='cbe'][data-role='user']#page-course-view-topics.editing {
         padding: 15px 10px;
       }
       >ul.topics #section-0:only-child {
-        display: none !important;
+        /*display: none !important;*/
       }
       li.section {
         .content {
