--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -114,5 +114,13 @@ body[data-theme='cbe'] {
     }
   }
 
+  .fileuploadsubmission {
+    img.icon.icon {
+      background-color: $primary-color;
+      padding: 2px;
+      border-radius: 2px;
+    }
+  }
+
 }
 
