add avatar logical

--- a/templates/navbar/navbar.mustache
+++ b/templates/navbar/navbar.mustache
@@ -86,15 +86,18 @@
         {{{ output.page_heading_menu }}}
     </ul>
 
-    <div id="navbar-menu-apps">
-        {{{ menu_apps_button }}}
-    </div>
-
     <ul id="navbar-usernav" class="nav navbar-nav usernav">
         <!-- navbar_plugin_output -->
         <li class="nav-item">
             {{{ output.navbar_plugin_output }}}
         </li>
+    </ul>
+
+    <div id="navbar-menu-apps">
+        {{{ menu_apps_button }}}
+    </div>
+
+    <ul id="navbar-usernav" class="nav navbar-nav usernav">
         <!-- user_menu -->
         <li class="nav-item align-items-center pl-2">
             {{{ output.user_menu }}}
