logical title more info

--- a/templates/navbar/course_header_navbar_component.mustache
+++ b/templates/navbar/course_header_navbar_component.mustache
@@ -10,7 +10,7 @@
             <a class="link" href="{{ tasks.href }}">{{# str }} course_menu_tasks, theme_cbe {{/ str }}</a>
         </li>
         <li class="moreinfo course-menu-item {{# more_info.active }}active{{/more_info.active}}">
-            <a class="link" href="{{ more_info.href }}">{{# str }} course_menu_moreinfo, theme_cbe {{/ str }}</a>
+            <a class="link" href="{{ more_info.href }}">{{ more_info.title }}</a>
         </li>
     </ul>
 </div>
