--- a/templates/pages/moreinfo_page.mustache
+++ b/templates/pages/moreinfo_page.mustache
@@ -27,7 +27,7 @@
     <main class="contain">
         <div class="container-title">
             <h3 class="title">
-                {{# str }} course_menu_moreinfo, theme_cbe {{/ str }}
+                {{ section_title }}
                 {{# is_teacher }}
                     <button type="button" class="btn-tooltip edit-section-zero" data-toggle="tooltip" data-placement="bottom" title="{{# str }} edit_section_zero, theme_cbe {{/ str }}">
                         <a class="link" href="{{ href_edit_section_zero }}">
