--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -294,12 +294,12 @@ body[data-theme='cbe'][data-role="user"] {
       div.comments-block {
         background-color: white;
         width: 100%;
-        outline: 1px solid $grey-border;
         display: flex;
         align-items: center;
         margin: 0 0 1px 0;
         flex-direction: column;
         position: relative;
+        border-top: 1px solid $grey-border;
         ul.comments {
           list-style: none;
           display: none;
