--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $grey-medium2: #C2C2C2;
 $grey-light: #F0F0F0;
 $shadow-color: rgba(0, 0, 0, 0.2);;
 
-$nav-height: 74px;
+$nav-height: 50px;
 $footer-height: 64px;
 
 $border-input: 10px;
@@ -21,3 +21,7 @@ $grey-hight: #717171;
 $font: Montserrat, sans-serif;
 $fontbold: Montserrat Bold, sans-serif;
 $fontthin: Montserrat Thin, sans-serif;
+
+//$font: PFHandbookPro, sans-serif;
+//$fontbold: PFHandbookPro Bold, sans-serif;
+//$fontthin: PFHandbookPro Thin, sans-serif;
