--- a/templates/modals/dashboard_createcourse.mustache
+++ b/templates/modals/dashboard_createcourse.mustache
@@ -92,7 +92,7 @@
                 <hr>
                 <footer class="modal-footer">
                     <button class="btn cancel" data-dismiss="modal">{{# str }} cancel, theme_cbe {{/ str }}</button>
-                    <button class="btn btn-primary create" data-action="create" disabled >Crear curso</button>
+                    <button class="btn btn-primary create" data-action="create" disabled >{{# str }} create_course, theme_cbe {{/ str }}</button>
                 </footer>
             </main>
         </div>
