monigote usuario sin foto

--- a/templates/components/module_component.mustache
+++ b/templates/components/module_component.mustache
@@ -23,7 +23,7 @@
         {{{ html_icon }}}
     </div>
     <div class="data">
-        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
+        <a class="title" href="{{ view_href }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
         <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
     </div>
 </div>
