--- a/templates/modals/board_create_module.mustache
+++ b/templates/modals/board_create_module.mustache
@@ -35,7 +35,7 @@
                         {{/ themes }}
                     </select>
                 </div>
-                <div class="mods">
+                <div class="mods" id="list-mods">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         {{# create.has_favourites }}
                         <li class="nav-item">
