footer and restyling modifications

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -22,6 +22,8 @@ $font: Montserrat, sans-serif;
 $fontbold: Montserrat Bold, sans-serif;
 $fontthin: Montserrat Thin, sans-serif;
 
+$font-footer: PFHandbookPro Thin, sans-serif;
+
 //$font: PFHandbookPro, sans-serif;
 //$fontbold: PFHandbookPro Bold, sans-serif;
 //$fontthin: PFHandbookPro Thin, sans-serif;
