#98: Add Header Menu APPs in Admin

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -502,3 +502,111 @@ body[data-theme='cbe'] {
 
 
 }
+
+body[data-theme='cbe'].admin {
+
+  #navbar-menu-apps {
+    position: relative;
+    top: 1px;
+    z-index: 1050;
+    #menu-apps-btn {
+      margin-right: 1px;
+      cursor: pointer;
+      position: relative;
+      top: -4px;
+      @media (max-width: 450px) {
+        margin-right: 0;
+      }
+      #dropdownMenuButton {
+        cursor: pointer;
+        border: none;
+        background-color: inherit;
+        padding: 4px;
+        &[aria-expanded="true"] {
+          background-color: $grey-light;
+        }
+      }
+      .dropdown-menu-right {
+        border-radius: 5px;
+        box-shadow: $shadow-color 0 3px 8px;
+        margin-top: 5px;
+        padding: 10px;
+        max-height: 500px;
+        overflow-y: scroll;
+        scrollbar-color: $grey-border transparent;
+        scrollbar-width: thin;
+        width: 294px;
+        @media (min-width: 0) {
+          right: -104px;
+        }
+        @media (min-width: 409px) {
+          right: -140px;
+        }
+        @media (min-width: 576px) {
+          right: 0;
+        }
+        ul.apps, ul#app-my-courses, ul#app-admin, ul#app-external {
+          list-style: none;
+          display: grid;
+          flex-wrap: wrap;
+          padding: 15px 2px 0 0;
+          margin-bottom: 0;
+          grid-template-columns: 84px 84px 84px;
+          grid-gap: 12px 2px;
+          li.app {
+            a.app-link {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: start;
+              text-align: center;
+              color: $black-ligth;
+              text-decoration: none;
+              .icon {
+                width: 40px;
+                height: 40px;
+                background-color: $primary-color;
+                border-radius: $border-radius;
+                margin-right: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                i {
+                  color: white;
+                  font-size: 19px;
+                }
+                &:hover {
+                  background-color: $primary-color-light;
+                }
+              }
+              .text {
+                text-align: center;
+                margin-top: 4px;
+                height: 26px;
+                font-size: 13px;
+                line-height: 15px;
+                overflow-wrap: anywhere;
+              }
+            }
+          }
+        }
+        ul#app-my-courses {
+          border-top: 1px solid $grey-border;
+          padding-top: 20px;
+          margin-bottom: 10px;
+          margin-top: 6px;
+        }
+        ul#app-external {
+          border-top: 1px solid $grey-border;
+          padding-top: 20px;
+          margin-top: 8px;
+        }
+        ul#app-admin {
+          border-bottom: 1px solid $grey-border;
+          padding-bottom: 4px;
+          margin-bottom: 6px;
+        }
+      }
+    }
+  }
+}
