--- a/templates/navbar/navbar_admin.mustache
+++ b/templates/navbar/navbar_admin.mustache
@@ -62,6 +62,11 @@
         <div class="ml-auto">
             {{{ output.search_box }}}
         </div>
+
+        <div id="navbar-menu-apps">
+            {{{ menu_apps_button }}}
+        </div>
+
         <ul class="nav navbar-nav usernav">
             <!-- navbar_plugin_output -->
             <li class="nav-item">
