#98: Add Header Menu APPs in Admin - Issue 1

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -503,7 +503,7 @@ body[data-theme='cbe'] {
 
 }
 
-body[data-theme='cbe'].admin {
+body[data-theme='cbe'][data-role="admin"] {
 
   #navbar-menu-apps {
     position: relative;
