--- a/templates/pages/moreinfo_page.mustache
+++ b/templates/pages/moreinfo_page.mustache
@@ -63,34 +63,94 @@
                     <p>{{# str }} select_activity_resource, theme_cbe {{/ str }}</p>
                 </header>
                 <main class="create_mod">
-                    <div class="mods">
-                        <div class="column">
-                            <h2>{{# str }} activities_upper, theme_cbe {{/ str }}</h2>
-                            <ul class="select-modules">
-                                {{# create.activities }}
-                                    <li class="select-module">
-                                        <a href="{{ mod_url }}" class="create-mod">
-                                            <div class="mod-icon {{ modname }}"></div>
-                                            <div class="text">{{ modtitle }}</div>
-                                        </a>
-                                    </li>
-                                {{/ create.activities}}
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h2>{{# str }} resources_upper, theme_cbe {{/ str }}</h2>
-                            <ul class="select-modules">
-                            <li class="select-module video">
-                                {{# create.resources }}
-                                    <li class="select-module">
-                                        <a href="{{ mod_url }}" class="create-mod resource_mod">
-                                            <div class="mod-icon {{ modname }} resource_mod"></div>
-                                            <div class="text">{{ modtitle }}</div>
-                                        </a>
-                                    </li>
-                                {{/ create.resources}}
+                    <div class="mods" id="list-mods">
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            {{# create.has_favourites }}
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#favourites" role="tab" aria-controls="home" aria-selected="true">
+                                        Favoritos
+                                    </a>
                                 </li>
-                            </ul>
+                            {{/ create.has_favourites }}
+                            {{^ create.has_favourites }}
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="recommended-tab" data-toggle="tab" href="#recommended" role="tab" aria-controls="recommended" aria-selected="false">
+                                        {{# str }} recommended {{/ str }}
+                                    </a>
+                                </li>
+                            {{/ create.has_favourites }}
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#activities" role="tab" aria-controls="profile" aria-selected="false">
+                                    {{# str }} activities {{/ str }}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#resources" role="tab" aria-controls="contact" aria-selected="false">
+                                    {{# str }} resources {{/ str }}
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="modsContent">
+                            {{# create.has_favourites }}
+                                <div class="tab-pane fade show active" id="favourites" role="tabpanel" aria-labelledby="home-tab">
+                                    <ul class="select-modules">
+                                        {{# create.favourites }}
+                                            <li class="select-module">
+                                                <a href="{{ mod_url }}" class="create-mod">
+                                                    <div class="mod-icon {{ modname }} {{# is_resource }}is_resource{{/ is_resource }}">
+                                                        {{{ icon }}}
+                                                    </div>
+                                                    <div class="text">{{ modtitle }}</div>
+                                                </a>
+                                            </li>
+                                        {{/ create.favourites}}
+                                    </ul>
+                                </div>
+                            {{/ create.has_favourites }}
+                            {{^ create.has_favourites }}
+                                <div class="tab-pane fade show active" id="recommended" role="tabpanel" aria-labelledby="profile-tab">
+                                    <ul class="select-modules">
+                                        {{# create.recommended }}
+                                            <li class="select-module">
+                                                <a href="{{ mod_url }}" class="create-mod">
+                                                    <div class="mod-icon {{ modname }} {{# is_resource }}is_resource{{/ is_resource }}">
+                                                        {{{ icon }}}
+                                                    </div>
+                                                    <div class="text">{{ modtitle }}</div>
+                                                </a>
+                                            </li>
+                                        {{/ create.recommended}}
+                                    </ul>
+                                </div>
+                            {{/ create.has_favourites }}
+                            <div class="tab-pane fade" id="activities" role="tabpanel" aria-labelledby="contact-tab">
+                                <ul class="select-modules">
+                                    {{# create.activities }}
+                                        <li class="select-module">
+                                            <a href="{{ mod_url }}" class="create-mod">
+                                                <div class="mod-icon {{ modname }} {{# is_resource }}is_resource{{/ is_resource }}">
+                                                    {{{ icon }}}
+                                                </div>
+                                                <div class="text">{{ modtitle }}</div>
+                                            </a>
+                                        </li>
+                                    {{/ create.activities}}
+                                </ul>
+                            </div>
+                            <div class="tab-pane fade" id="resources" role="tabpanel" aria-labelledby="contact-tab">
+                                <ul class="select-modules">
+                                    {{# create.resources }}
+                                        <li class="select-module">
+                                            <a href="{{ mod_url }}" class="create-mod">
+                                                <div class="mod-icon {{ modname }} {{# is_resource }}is_resource{{/ is_resource }}">
+                                                    {{{ icon }}}
+                                                </div>
+                                                <div class="text">{{ modtitle }}</div>
+                                            </a>
+                                        </li>
+                                    {{/ create.resources}}
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </main>
