--- a/templates/modals/dashboard_createcourse.mustache
+++ b/templates/modals/dashboard_createcourse.mustache
@@ -17,7 +17,7 @@
                             </button>
                         </div>
                         <div class="verify-input">
-                            <input type="text" class="form-control validation-input" id="fullname" placeholder="Rellene el nombre completo del nuevo curso">
+                            <input type="text" class="form-control validation-input" id="fullname" placeholder="{{# str }} fullname_placeholder, theme_cbe {{/ str }}">
                             <span id="verify-fullname" class="verify">
                                 <i class="fa fa-check-circle-o" aria-hidden="true"></i>
                                 <i class="fa fa-times-circle-o" aria-hidden="true"></i>
@@ -32,7 +32,7 @@
                             </button>
                         </div>
                         <div class="verify-input">
-                            <input type="text" class="form-control validation-input" id="shortname"  placeholder="Rellene el nombre corto del curso">
+                            <input type="text" class="form-control validation-input" id="shortname"  placeholder="{{# str }} shortname_placeholder, theme_cbe {{/ str }}">
                             <span id="verify-shortname" class="verify">
                                 <i class="fa fa-check-circle-o" aria-hidden="true"></i>
                                 <i class="fa fa-times-circle-o" aria-hidden="true"></i>
@@ -50,7 +50,7 @@
                                 </button>
                             </div>
                             <div class="verify-input">
-                                <input type="text" class="form-control validation-input" id="shortname"  placeholder="Rellene el nombre corto del curso">
+                                <input type="text" class="form-control validation-input" id="shortname"  placeholder="{{# str }} shortname_placeholder, theme_cbe {{/ str }}">
                                 <span id="verify-shortname" class="verify">
                                     <i class="fa fa-check-circle-o" aria-hidden="true"></i>
                                     <i class="fa fa-times-circle-o" aria-hidden="true"></i>
