--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -226,6 +226,9 @@ body[data-theme='cbe'] {
     position: relative;
     top: 4px;
     margin-right: 5px;
+    &.notigc {
+      padding-right: 0;
+    }
     @media (max-width: 500px) {
       position: absolute;
       right: -11px;
