--- a/templates/sections/course_left_section_menu_component.mustache
+++ b/templates/sections/course_left_section_menu_component.mustache
@@ -17,12 +17,14 @@
                 <span class="text">{{# str }} course_left_resources, theme_cbe {{/ str }}</span>
             </a>
         </li>
+        {{# links.vclasses.is_visible }}
         <li class="link">
             <a href="{{ links.vclasses.href }}" {{# links.vclasses.blank }} target="_blank"{{/ links.vclasses.blank }}>
                 <i class="fa fa-video-camera" aria-hidden="true"></i>
                 <span class="text">{{ links.vclasses.name }}</span>
             </a>
         </li>
+        {{/ links.vclasses.is_visible }}
         <li class="link">
             <a href="{{ links.grades }}">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
