--- a/templates/columns2/columns2_modedit.mustache
+++ b/templates/columns2/columns2_modedit.mustache
@@ -50,8 +50,15 @@
 }}
 {{> theme_boost/head }}
 
-<body {{{ bodyattributes }}} data-theme="cbe" data-role="user">
+<body {{{ bodyattributes }}} data-theme="cbe" data-role="user" data-region="modedit">
 {{> core/local/toast/wrapper}}
+
+    <div class="alert alert-warning alert-dismissible fade show cbe-alert hidden" role="alert" id="alert-cbe-modedit">
+        {{# str }} alert_modedit, theme_cbe {{/ str }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 
     <div id="page-wrapper" class="d-print-block">
 
