avis legal del centre

--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -31,7 +31,7 @@
             </a>
         {{/ has_dd_link }}
         <div class="politics">
-            <a href="{{ aviso_legal_url }}" target="_blank">{{#str}} aviso_legal, theme_cbe {{/str}} <span class="more"><span class="pipe">|</span><a href="{{ policies_url }}" target="_blank">{{#str}} policies, theme_cbe {{/str}}</a></span>
+            <a href="{{ aviso_legal_url }}" target="_blank">{{#str}} aviso_legal, theme_cbe {{/str}}</a>
         </div>
         {{{ output.standard_end_of_body_html }}}
     </div>
