css submission style

--- a/scss/components/_assignsubmission_tipnc.scss
+++ b/scss/components/_assignsubmission_tipnc.scss
@@ -30,7 +30,7 @@ body[data-theme="cbe"][data-role="user"]#page-mod-assign-editsubmission {
   }
 }
 
-body[data-theme="cbe"][data-role="user"]#page-mod-assign-grader {
+body[data-theme="cbe"][data-role="user"] {
   div[data-region="assignsubmission_tipnc"] .hide_header {
     height: 51px;
     top: -66px;
