DDNEW-11: start automatization

--- a/templates/modals/board_create_module.mustache
+++ b/templates/modals/board_create_module.mustache
@@ -40,7 +40,7 @@
                         {{# create.has_favourites }}
                         <li class="nav-item">
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#favourites" role="tab" aria-controls="home" aria-selected="true">
-                                Favoritos
+                                {{# str }} favourites {{/ str }}
                             </a>
                         </li>
                         {{/ create.has_favourites }}
