Fix duplicated navbar-usernav id
Signed-off-by: Simó Albert i Beltran <sim6@bona.gent>

--- a/templates/navbar/navbar.mustache
+++ b/templates/navbar/navbar.mustache
@@ -97,7 +97,7 @@
         {{{ menu_apps_button }}}
     </div>
 
-    <ul id="navbar-usernav" class="nav navbar-nav usernav">
+    <ul id="navbar-avatar" class="nav navbar-nav usernav">
         <!-- user_menu -->
         <li class="nav-item align-items-center pl-2">
             {{{ output.user_menu }}}
