DDNEW-100: Permisos de edición y eliminación de cursos

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -153,6 +153,7 @@ body[data-theme='cbe'][data-role="user"] {
       padding: 30px;
       header {
         text-align: center;
+        color: $black-ligth;
         h1 {
           font-weight: 600;
         }
