--- a/templates/navbar/navbar_login.mustache
+++ b/templates/navbar/navbar_login.mustache
@@ -37,7 +37,7 @@
         "sitename": "Moodle Site"
     }
 }}
-<nav class="fixed-top navbar_login navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
+<nav class="fixed-top navbar_login navbar-light bg-white navbar-expand moodle-has-zindex {{#darkheader}}cbe-darkheader{{/darkheader}}" aria-label="{{#str}}sitemenubar, admin{{/str}}">
 
     <div id="login-logo">
         {{{ logo }}}
